架构 spec 修订：钉定技术栈版本、补充虚拟线程 Pinning 防护纪律、扩充后续待定列表